--- a/PhoenixVisualizer.App/PhoenixVisualizer.csproj
+++ b/PhoenixVisualizer.App/PhoenixVisualizer.csproj
@@ -42,14 +42,14 @@
   <ItemGroup>
     <ProjectReference Include="..\PhoenixVisualizer.Core\PhoenixVisualizer.Core.csproj" />
     <ProjectReference Include="..\PhoenixVisualizer.Audio\PhoenixVisualizer.Audio.csproj" />
-    <ProjectReference Include="..\PhoenixVisualizer.Visuals\PhoenixVisualizer.Visuals.csproj" />
     <ProjectReference Include="..\PhoenixVisualizer.PluginHost\PhoenixVisualizer.PluginHost.csproj" />
     <ProjectReference Include="..\PhoenixVisualizer.ApeHost\PhoenixVisualizer.ApeHost.csproj" />
     <ProjectReference Include="..\PhoenixVisualizer.AvsEngine\PhoenixVisualizer.AvsEngine.csproj" />
     <ProjectReference Include="..\PhoenixVisualizer.Plots\PhoenixVisualizer.Plots.csproj" />
     <ProjectReference Include="..\PhoenixVisualizer.Plugins.Avs\PhoenixVisualizer.Plugins.Avs.csproj" />
     <ProjectReference Include="..\PhoenixVisualizer.Plugins.Ape.Phoenix\PhoenixVisualizer.Plugins.Ape.Phoenix.csproj" />
-    <ProjectReference Include="..\PhoenixVisualizer.Editor\PhoenixVisualizer.Editor.csproj" />
+    <ProjectReference Include="..\PhoenixVisualizer.Visuals\PhoenixVisualizer.Visuals.csproj" />
+    <!-- <ProjectReference Include="..\PhoenixVisualizer.Editor\PhoenixVisualizer.Editor.csproj" /> -->
   </ItemGroup>
 
   <ItemGroup>
