VLC Binary Compatibility Crisis - Audio Playback Crashes
- Updated LibVLCSharp to 3.9.4 and VideoLAN.LibVLC.Windows to 3.0.20
- Fixed most C# warnings (down from 52 to 3 warnings)
- Added comprehensive debug logging to VlcAudioService
- Fixed null reference warnings in visualizer nodes
- Fixed CA2014 stack overflow warnings in XSS nodes
- Updated documentation with current crisis status

CRITICAL ISSUE: App opens but crashes immediately when playing audio
- Error: Illegal Instruction (0xc000001d) in libamem_plugin.dll
- Root cause: Binary incompatibility between LibVLCSharp 3.9.4 and VLC native libraries
- Next steps: Downgrade LibVLCSharp to 3.8.5 or build VLC from source

Status: VLC Binary Compatibility Crisis - Audio Playback Crashes

--- a/PhoenixVisualizer.Audio/PhoenixVisualizer.Audio.csproj
+++ b/PhoenixVisualizer.Audio/PhoenixVisualizer.Audio.csproj
@@ -12,9 +12,11 @@
     <ProjectReference Include="..\PhoenixVisualizer.Core\PhoenixVisualizer.Core.csproj" />
   </ItemGroup>
 
+
   <ItemGroup>
     <PackageReference Include="LibVLCSharp" Version="3.9.4" />
-    <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.21" />
+    <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.20" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
